cmake_minimum_required(VERSION 3.23)
project(TrafficMonitor)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(include/OpenHardwareMonitor)
include_directories(OpenHardwareMonitorApi)
include_directories(PluginDemo)
include_directories(TrafficMonitor)
include_directories(TrafficMonitor/tinyxml2)

add_executable(TrafficMonitor
        include/OpenHardwareMonitor/OpenHardwareMonitorApi.h
        include/OpenHardwareMonitor/OpenHardwareMonitorGlobal.h
        include/PluginInterface.h
        OpenHardwareMonitorApi/OpenHardwareMonitorImp.cpp
        OpenHardwareMonitorApi/OpenHardwareMonitorImp.h
        OpenHardwareMonitorApi/resource.h
        OpenHardwareMonitorApi/Stdafx.cpp
        OpenHardwareMonitorApi/Stdafx.h
        OpenHardwareMonitorApi/UpdateVisitor.cpp
        OpenHardwareMonitorApi/UpdateVisitor.h
        PluginDemo/CustomDrawItem.cpp
        PluginDemo/CustomDrawItem.h
        PluginDemo/DataManager.cpp
        PluginDemo/DataManager.h
        PluginDemo/framework.h
        PluginDemo/OptionsDlg.cpp
        PluginDemo/OptionsDlg.h
        PluginDemo/pch.cpp
        PluginDemo/pch.h
        PluginDemo/PluginDemo.cpp
        PluginDemo/PluginDemo.h
        PluginDemo/PluginSystemDate.cpp
        PluginDemo/PluginSystemDate.h
        PluginDemo/PluginSystemTime.cpp
        PluginDemo/PluginSystemTime.h
        PluginDemo/resource.h
        TrafficMonitor/tinyxml2/tinyxml2.cpp
        TrafficMonitor/tinyxml2/tinyxml2.h
        TrafficMonitor/AboutDlg.cpp
        TrafficMonitor/AboutDlg.h
        TrafficMonitor/AdapterCommon.cpp
        TrafficMonitor/AdapterCommon.h
        TrafficMonitor/AppAlreadyRuningDlg.cpp
        TrafficMonitor/AppAlreadyRuningDlg.h
        TrafficMonitor/auto_start_helper.cpp
        TrafficMonitor/auto_start_helper.h
        TrafficMonitor/BaseDialog.cpp
        TrafficMonitor/BaseDialog.h
        TrafficMonitor/CalendarHelper.cpp
        TrafficMonitor/CalendarHelper.h
        TrafficMonitor/CAutoAdaptSettingsDlg.cpp
        TrafficMonitor/CAutoAdaptSettingsDlg.h
        TrafficMonitor/CMFCColorDialogEx.cpp
        TrafficMonitor/CMFCColorDialogEx.h
        TrafficMonitor/ColorSettingListCtrl.cpp
        TrafficMonitor/ColorSettingListCtrl.h
        TrafficMonitor/ColorStatic.cpp
        TrafficMonitor/ColorStatic.h
        TrafficMonitor/ComboBox2.cpp
        TrafficMonitor/ComboBox2.h
        TrafficMonitor/Common.cpp
        TrafficMonitor/Common.h
        TrafficMonitor/CommonData.cpp
        TrafficMonitor/CommonData.h
        TrafficMonitor/CPUUsage.cpp
        TrafficMonitor/CPUUsage.h
        TrafficMonitor/crashtool.cpp
        TrafficMonitor/crashtool.h
        TrafficMonitor/CSkinPreviewView.cpp
        TrafficMonitor/CSkinPreviewView.h
        TrafficMonitor/CTabCtrlEx.cpp
        TrafficMonitor/CTabCtrlEx.h
        TrafficMonitor/CVariant.cpp
        TrafficMonitor/CVariant.h
        TrafficMonitor/DisplayTextSettingDlg.cpp
        TrafficMonitor/DisplayTextSettingDlg.h
        TrafficMonitor/DllFunctions.cpp
        TrafficMonitor/DllFunctions.h
        TrafficMonitor/DonateDlg.cpp
        TrafficMonitor/DonateDlg.h
        TrafficMonitor/DrawCommon.cpp
        TrafficMonitor/DrawCommon.h
        TrafficMonitor/DrawCommonEx.cpp
        TrafficMonitor/DrawCommonEx.h
        TrafficMonitor/FilePathHelper.cpp
        TrafficMonitor/FilePathHelper.h
        TrafficMonitor/GeneralSettingsDlg.cpp
        TrafficMonitor/GeneralSettingsDlg.h
        TrafficMonitor/HighResolutionTimer.h
        TrafficMonitor/HistoryTrafficCalendarDlg.cpp
        TrafficMonitor/HistoryTrafficCalendarDlg.h
        TrafficMonitor/HistoryTrafficDlg.cpp
        TrafficMonitor/HistoryTrafficDlg.h
        TrafficMonitor/HistoryTrafficFile.cpp
        TrafficMonitor/HistoryTrafficFile.h
        TrafficMonitor/HistoryTrafficListCtrl.cpp
        TrafficMonitor/HistoryTrafficListCtrl.h
        TrafficMonitor/HistoryTrafficListDlg.cpp
        TrafficMonitor/HistoryTrafficListDlg.h
        TrafficMonitor/IconSelectDlg.cpp
        TrafficMonitor/IconSelectDlg.h
        TrafficMonitor/IniHelper.cpp
        TrafficMonitor/IniHelper.h
        TrafficMonitor/LinkStatic.cpp
        TrafficMonitor/LinkStatic.h
        TrafficMonitor/ListCtrlEx.cpp
        TrafficMonitor/ListCtrlEx.h
        TrafficMonitor/MainWndColorDlg.cpp
        TrafficMonitor/MainWndColorDlg.h
        TrafficMonitor/MainWndSettingsDlg.cpp
        TrafficMonitor/MainWndSettingsDlg.h
        TrafficMonitor/MessageDlg.cpp
        TrafficMonitor/MessageDlg.h
        TrafficMonitor/NetworkInfoDlg.cpp
        TrafficMonitor/NetworkInfoDlg.h
        TrafficMonitor/OptionsDlg.cpp
        TrafficMonitor/OptionsDlg.h
        TrafficMonitor/PictureStatic.cpp
        TrafficMonitor/PictureStatic.h
        TrafficMonitor/PluginInfoDlg.cpp
        TrafficMonitor/PluginInfoDlg.h
        TrafficMonitor/PluginManager.cpp
        TrafficMonitor/PluginManager.h
        TrafficMonitor/PluginManagerDlg.cpp
        TrafficMonitor/PluginManagerDlg.h
        TrafficMonitor/resource.h
        TrafficMonitor/SelectConnectionsDlg.cpp
        TrafficMonitor/SelectConnectionsDlg.h
        TrafficMonitor/SetItemOrderDlg.cpp
        TrafficMonitor/SetItemOrderDlg.h
        TrafficMonitor/SimpleXML.cpp
        TrafficMonitor/SimpleXML.h
        TrafficMonitor/SkinDlg.cpp
        TrafficMonitor/SkinDlg.h
        TrafficMonitor/SkinFile.cpp
        TrafficMonitor/SkinFile.h
        TrafficMonitor/SpinEdit.cpp
        TrafficMonitor/SpinEdit.h
        TrafficMonitor/StaticEx.cpp
        TrafficMonitor/StaticEx.h
        TrafficMonitor/stdafx.cpp
        TrafficMonitor/stdafx.h
        TrafficMonitor/TabDlg.cpp
        TrafficMonitor/TabDlg.h
        TrafficMonitor/targetver.h
        TrafficMonitor/TaskbarColorDlg.cpp
        TrafficMonitor/TaskbarColorDlg.h
        TrafficMonitor/TaskbarDefaultStyle.cpp
        TrafficMonitor/TaskbarDefaultStyle.h
        TrafficMonitor/TaskBarDlg.cpp
        TrafficMonitor/TaskBarDlg.h
        TrafficMonitor/TaskbarItemOrderHelper.cpp
        TrafficMonitor/TaskbarItemOrderHelper.h
        TrafficMonitor/TaskBarSettingsDlg.cpp
        TrafficMonitor/TaskBarSettingsDlg.h
        TrafficMonitor/Test.cpp
        TrafficMonitor/Test.h
        TrafficMonitor/TinyXml2Helper.cpp
        TrafficMonitor/TinyXml2Helper.h
        TrafficMonitor/TrafficMonitor.cpp
        TrafficMonitor/TrafficMonitor.h
        TrafficMonitor/TrafficMonitorDlg.cpp
        TrafficMonitor/TrafficMonitorDlg.h
        TrafficMonitor/UpdateHelper.cpp
        TrafficMonitor/UpdateHelper.h
        TrafficMonitor/WIC.cpp
        TrafficMonitor/WIC.h
        TrafficMonitor/WindowsSettingHelper.cpp
        TrafficMonitor/WindowsSettingHelper.h
        TrafficMonitor/WinVersionHelper.cpp
        TrafficMonitor/WinVersionHelper.h)
